Script updates to check off tasks on the back end

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="list-group-item">
             <div class="input-group">
                 <input type="text" class="form-control" placeholder="What Needs Doing?">
-                <button class="btn btn-success" type="button" onclick="addTask()">Add Item</button>
+                <button class="btn btn-success addTask" type="button">Add Item</button>
             </div>
         </div>
     </div>
